[package]
name = "mrdo"
version = "0.1.5"
authors = ["Dominic Hamon <dma+github@stripysock.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "^0.5"
log = "^0.4"
nom = "^7.0"
num_enum="^0.6"
structopt = "^0.3"

[dev-dependencies]
assert_approx_eq = "^1.1"
