[package]
name = "mrdo"
description = "A programming language (compiler, assembler, VM, and REPL) for working with collections of data"
version = "0.1.6"
authors = ["Dominic Hamon <dma+github@stripysock.com>"]
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/dmah42/mrdo"
repository = "https://github.com/dmah42/mrdo"
keywords = ["cli", "compiler", "assembler", "VM", "programming-language"]
categories = ["compilers"]

[dependencies]
pretty_env_logger = "0.5"
log = "0.4"
nom = "7.1"
num_enum="0.7"
clap = { version = "4.4", features = ["derive"]}

[dev-dependencies]
assert_approx_eq = "1.1"
